Fix detecting infinite loops in PolishLoopDetector

Resetting counter too early was causing infinite loop in a function
responsible for detecting infinite loops (how ironic). Fix this
behavior.
Decrease the threshold for detecting infinite loop from 100k to 10k
iterations for better responsiveness.

Fixes: QTBUG-126474
Pick-to: 6.7 6.5
Change-Id: Ife45e694d417b1d23fa1294e069ee54eff31c047
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>
(cherry picked from commit c9e235a638c991f523cf6250af6ea82ad4a17639)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>